@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <script>
 var $wnd = parent;
 var $doc = $wnd.document;
